--- a/pages/tres.html
+++ b/pages/tres.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tipos de datos primitivos - Enciclopedia JS</title>
-  <link rel="stylesheet" href="../WebJavaScript/style/tres.css">
+  <link rel="stylesheet" href="../style/tres.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/styles/github.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,14 +27,14 @@
         </button>
         <div class="collapse navbar-collapse" id="nav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="../WebJavaScript/index.html">Introducción a JavaScript</a></li>
-            <li class="nav-item"><a class="nav-link" href="../WebJavaScript/pages/dos.html">Sintaxis básica</a></li>
-            <li class="nav-item"><a class="nav-link" href="../WebJavaScript/pages/tres.html">Tipos de datos</a></li>
-            <li class="nav-item"><a class="nav-link" href="../WebJavaScript/pages/cuatro.html">Variables</a></li>
-            <li class="nav-item"><a class="nav-link" href="../WebJavaScript/pages/cinco.html">Operadores</a></li>
-            <li class="nav-item"><a class="nav-link" href="../WebJavaScript/pages/seis.html">Condicionales</a></li>
-            <li class="nav-item"><a class="nav-link" href="../WebJavaScript/pages/ciete.html">Bucles</a></li>
-            <li class="nav-item"><a class="nav-link" href="../WebJavaScript/pages/ocho.html">Funciones</a></li>
+            <li class="nav-item"><a class="nav-link" href="../index.html">Introducción a JavaScript</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/dos.html">Sintaxis básica</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/tres.html">Tipos de datos</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/cuatro.html">Variables</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/cinco.html">Operadores</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/seis.html">Condicionales</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/ciete.html">Bucles</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/ocho.html">Funciones</a></li>
           </ul>
         </div>
       </div>
