--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Enciclopedia Web Básica de JavaScript</title>
-  <link rel="stylesheet" href="style/index.css">
+  <link rel="stylesheet" href="/WebJavaScriptstyle/index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/styles/github.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
