--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </button>
         <div class="collapse navbar-collapse" id="nav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Introduccion a JavaScript</a></li>
-            <li class="nav-item"><a class="nav-link" href="../pages/dos.html">Sintaxis básica</a></li>
-            <li class="nav-item"><a class="nav-link" href="../pages/tres.html">Tipos de datos</a></li>
-            <li class="nav-item"><a class="nav-link" href="../pages/cuatro.html">Variables</a></li>
-            <li class="nav-item"><a class="nav-link" href="../pages/cinco.html">Operadores</a></li>
-            <li class="nav-item"><a class="nav-link" href="../pages/seis.html">Condicionales</a></li>
-            <li class="nav-item"><a class="nav-link" href="../pages/siete.html">Bucles</a></li>
-            <li class="nav-item"><a class="nav-link" href="../pages/ocho.html">Funciones</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Introduccion a JavaScript</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/dos.html">Sintaxis básica</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/tres.html">Tipos de datos</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/cuatro.html">Variables</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/cinco.html">Operadores</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/seis.html">Condicionales</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/siete.html">Bucles</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/ocho.html">Funciones</a></li>
           </ul>
         </div>
       </div>
